# rtt-core-extensions

./: .gitignore  CMakeLists.txt  README.md  rtt-core-extensions-config-version.cmake.in  rtt-core-extensions-config.cmake.in
include/: port_container.hpp
ops/: test-call-trace.ops
src/: CMakeLists.txt  FileReporting.cpp  FileReporting.hpp  IntrospectionReporter.cpp  IntrospectionReporter.hpp  NiceHeaderMarshaller.hpp  ReportingComponent.cpp  ReportingComponent.hpp  TableHeaderMarshaller.hpp  TableMarshaller.hpp  rtt-introspection-base-test.cpp  rtt-introspection-base-test.hpp  rtt-introspection-base.cpp  rtt-introspection-base.hpp  rtt-jointaware-taskcontext.cpp  rtt-jointaware-taskcontext.hpp  rtt-kinematic-chain-ja.cpp  rtt-kinematic-chain-ja.hpp  rtt-kinematic-chain-jt.cpp  rtt-kinematic-chain-jt.hpp
src/rtt-core-extensions/: JointMappingService.cpp  JointMappingService.hpp  rtt-introspection-base.cpp  rtt-introspection-base.hpp  rtt-jointaware-taskcontext.cpp  rtt-jointaware-taskcontext.hpp
